<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.example.androidcourse.viewmodels.EditableHabitViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragments.EditHabitFragment">


        <EditText
            android:id="@+id/habitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habitNameHint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:text="@={model.name}"
            android:textSize="@dimen/text_size" />


        <EditText
            android:id="@+id/habitDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habitDescription"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:nextFocusDown="@id/habitRepetitions"
            android:text="@={model.description}"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/habitPriority" />

            <Spinner
                android:id="@+id/habitPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:entries="@array/priority_array" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            style="@style/TextViewStyle"
            android:layout_marginTop="8dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/habitType" />

        <RadioGroup
            android:id="@+id/habitTypeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_good"
            android:orientation="vertical"
            app:onCheckedChangeListener="@{(group, checkedId) -> model.setType(checkedId)}">

            <RadioButton
                android:id="@+id/radio_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/radio_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad" />
        </RadioGroup>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/habitRepetitions"
                android:layout_width="match_parent"
                style="@style/TextViewStyle"
                android:hint="Количество повторени"
                android:importantForAutofill="no"
                android:inputType="number"
                android:nextFocusDown="@id/habitPeriodicity"
                android:text="@={model.stringRepetitions}" />



            <EditText
                android:id="@+id/habitPeriodicity"
                android:layout_width="match_parent"
                style="@style/TextViewStyle"
                android:focusable="true"
                android:hint="Период (дней)"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@={model.stringPeriodicity}" />



        </LinearLayout>


        <Button
            android:id="@+id/saveHabitButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/save_button"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="@color/icons" />
    </LinearLayout>
</layout>